mudança da instancia de url para verificacao de imagens