@@ -7,6 +7,7 @@ import br.edu.ifsp.arq.model.entity.NewsArticle;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -85,7 +86,8 @@ public class CreateNewsArticle extends HttpServlet {
         boolean isValid = false;
 
         try {
-            URL url = new URL(imageUrl);
+            URI uri = new URI(imageUrl);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("HEAD");
             connection.connect();
